k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-ingress
  namespace: niri-bridge
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns01"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - niri-matrix.appditto.com
    secretName: niri-matrix-appditto-com-tls
  rules:
  - host: niri-matrix.appditto.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse-lb
            port:
              number: 8008
---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mautrix-ingress
  namespace: niri-bridge
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns01"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - niri-mautrix.appditto.com
    secretName: niri-mautrix-appditto-com-tls
  rules:
  - host: niri-mautrix.appditto.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discord-bridge-lb
            port:
              number: 29334
